[Core] Log if threadLocal can't be clear